fix: correctly rename genexec to gexec and fix api endpoints
